# phantomgrid

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile.migrate  alembic.ini
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_artifacts.py
backend/services/active-response/: Dockerfile  main.py
backend/services/alert-engine/: Dockerfile  main.py  requirements.txt
backend/services/analytics/: Dockerfile  main.py  requirements.txt
backend/services/api-gateway/: Dockerfile  main.py  requirements.txt
backend/services/auth-service/: Dockerfile  main.py  requirements.txt
backend/services/decoy-manager/: Dockerfile  main.py  requirements.txt
backend/services/event-processor/: Dockerfile  main.py  requirements.txt
backend/services/honeypot-engine/: Dockerfile  config.py  event_emitter.py  fake_shell.py  main.py  requirements.txt  session_tracker.py
backend/services/honeypot-engine/ai/: phantom_ai.py
backend/services/honeypot-engine/evasion/: fingerprint_manager.py
backend/services/honeypot-engine/protocols/: __init__.py  aws_metadata_handler.py  base.py  coap_handler.py  dnp3_handler.py  dns_handler.py  docker_api_handler.py  ftp_handler.py  http_handler.py  k8s_api_handler.py  modbus_handler.py  mqtt_handler.py  mssql_handler.py  mysql_handler.py  postgresql_handler.py  rdp_handler.py  redis_handler.py  s7_handler.py  smb_handler.py  smtp_handler.py  snmp_handler.py  ssh_handler.py  telnet_handler.py  vnc_handler.py
backend/services/integrations/: Dockerfile  main.py  requirements.txt
backend/services/mitre-mapper/: Dockerfile  main.py
backend/services/notifications/: Dockerfile  main.py  requirements.txt
backend/services/realtime/: Dockerfile  main.py  requirements.txt
backend/services/tenant-manager/: Dockerfile  main.py  requirements.txt
backend/shared/: db.py  enums.py  kafka.py  mitre_map.py  redis_client.py  tenant_context.py
backend/shared/models/: __init__.py  alert.py  artifact.py  decoy.py  event.py  integration.py  tenant.py  user.py
backend/shared/schemas/: alert.py  auth.py  event.py
charts/phantomgrid/: Chart.yaml  README.md  values.yaml
deploy/: CADDY_PROD_INFRAHUB.CADDYFILE
deploy/grafana/dashboards/: phantomgrid-overview.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/dashboard/: AttackMap.tsx  EventDetailDrawer.tsx  LiveEventFeed.tsx
frontend/src/components/decoys/: DecoyCreateWizard.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: ActiveResponse.tsx  AlertDetail.tsx  Alerts.tsx  Artifacts.tsx  Attackers.tsx  Dashboard.tsx  DecoyDetail.tsx  Decoys.tsx  Events.tsx  Integrations.tsx  Login.tsx  Mitre.tsx  Networks.tsx  Register.tsx  Rules.tsx  Sensors.tsx  Sessions.tsx  Settings.tsx  ThreatIntel.tsx  Users.tsx
frontend/src/store/: authStore.ts  useStore.ts
secrets/: jwt_public.pem
services-python/mitre-mapper/app/: main.py
services-python/notifications/: requirements.txt
services-python/notifications/app/: main.py
services/alert-engine/: Cargo.toml  Dockerfile
services/alert-engine/src/: main.rs  tests.rs
services/alert-engine/src/rules/: correlation.rs  mod.rs  simple.rs  threshold.rs
services/analytics/: Cargo.toml  Dockerfile
services/analytics/src/: main.rs
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: main.rs
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: main.rs  tests.rs
services/auth-service/src/handlers/: auth.rs  health.rs
services/auth-service/src/middleware/: jwt.rs
services/decoy-manager/: Cargo.toml  Dockerfile
services/decoy-manager/src/: main.rs
services/event-processor/: Cargo.toml  Dockerfile
services/event-processor/src/: main.rs
services/honeypot-engine/: Cargo.toml  Dockerfile
services/honeypot-engine/src/: main.rs  tests.rs
services/honeypot-engine/src/protocols/: http.rs  mod.rs  redis_hp.rs  ssh.rs  telnet.rs
services/integrations/: Cargo.toml  Dockerfile
services/integrations/src/: main.rs
services/realtime/: Cargo.toml  Dockerfile
services/realtime/src/: main.rs
services/sensor/: Cargo.toml  Dockerfile
services/sensor/src/: main.rs
services/tenant-manager/: Cargo.toml  Dockerfile
services/tenant-manager/src/: main.rs
shared/phantomgrid-db/: Cargo.toml
shared/phantomgrid-db/migrations/: 0001_init.sql  0002_alerting.sql  0003_auth_hardening.sql  001_initial.sql
shared/phantomgrid-db/src/: lib.rs
shared/phantomgrid-kafka/: Cargo.toml
shared/phantomgrid-kafka/src/: lib.rs
shared/phantomgrid-types/: Cargo.toml
shared/phantomgrid-types/src/: lib.rs  metrics.rs  tests.rs
