[workspace]
resolver = "2"
members = [
  "shared/phantomgrid-types",
  "shared/phantomgrid-db",
  "shared/phantomgrid-kafka",
  "services/api-gateway",
  "services/auth-service",
  "services/decoy-manager",
  "services/honeypot-engine",
  "services/event-processor",
  "services/alert-engine",
  "services/realtime",
  "services/analytics",
  "services/tenant-manager",
  "services/sensor",
  "services/integrations"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls"] }
redis = { version = "0.25", features = ["tokio-comp"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
russh = "0.44"
russh-keys = "0.44"
maxminddb = "0.23"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
prometheus = { version = "0.13", features = ["process"] }
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic"] }
tonic = "0.11"
prost = "0.12"
hyper = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
clap = { version = "4", features = ["derive"] }
config = "0.14"
bytes = "1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
totp-rs = "5"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
moka = { version = "0.12", features = ["future"] }
dashmap = "5"
regex = "1"
once_cell = "1"
