[package]
name = "alert-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
sqlx.workspace = true
phantomgrid-db = { path = "../../shared/phantomgrid-db" }
phantomgrid-kafka = { path = "../../shared/phantomgrid-kafka" }
phantomgrid-types = { path = "../../shared/phantomgrid-types" }
