[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
uuid.workspace = true
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
redis.workspace = true
phantomgrid-types = { path = "../../shared/phantomgrid-types" }
