[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
rand = "0.8"
phantomgrid-types = { path = "../../shared/phantomgrid-types" }
phantomgrid-db = { path = "../../shared/phantomgrid-db" }
