[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
redis.workspace = true
phantomgrid-types = { path = "../../shared/phantomgrid-types" }
phantomgrid-db = { path = "../../shared/phantomgrid-db" }
