[package]
name = "event-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
redis.workspace = true
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
phantomgrid-db = { path = "../../shared/phantomgrid-db" }
phantomgrid-kafka = { path = "../../shared/phantomgrid-kafka" }
phantomgrid-types = { path = "../../shared/phantomgrid-types" }
