[package]
name = "realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
rdkafka.workspace = true
futures-util = "0.3"
phantomgrid-kafka = { path = "../../shared/phantomgrid-kafka" }
phantomgrid-types = { path = "../../shared/phantomgrid-types" }
