[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
